manifests/argo-cd/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-cd
spec:
  parentRefs:
    - name: trial-studio-gateway
      namespace: istio-system
      kind: Gateway
      group: gateway.networking.k8s.io
  hostnames: ["argo-cd.trial.studio"]
  rules:
    - backendRefs:
        - name: argo-cd-argocd-server
          port: 443
          group: ""
          kind: Service
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
